tests/language_tests/pass/0046_mixed_expression_precedence.ee
fn main() {
    print(1 + 2 < 4 && false || 5 == 5);
}
