tests/language_tests/fail/0072_nothing_less_than_double.ee
fn main() {
    print(nothing < 1.5);
}
